fixed map not showing

--- a/client/src/pages/QueueStatusPage/index.css
+++ b/client/src/pages/QueueStatusPage/index.css
@@ -1,15 +1,12 @@
 .leaflet-container {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: calc(100% - 30px);
-  height: 200px;
+  width: 100%;
+  height: 100%;
   position: absolute;
 }
 
 .miniMap {
-  position: absolute;
-  margin-left: 30px;
-  width: calc(100% - 30px);
-  margin-right: 30px;
+  position: relative;
+  margin: 30px;
+  width: calc(100%-30px);
   height: 200px;
 }
