--- a/client/src/pages/StoreSearchPage/index.css
+++ b/client/src/pages/StoreSearchPage/index.css
@@ -1,5 +1,5 @@
-.leaflet-container {
-    width: 100%;
-    height: calc(100vh - 48px);
-    position: fixed;
+.bigMap {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
